Don't use the pre-built I2P.app to build the bundle anymore, don't use I2P_SIGNER and I2P_CODE_SIGNER anymore because we're not signing the native libs